리뷰반영: FixedGenerator 클래스 추가 등